# evobot_mm

./: .gitignore  AMBuildScript  BUILD_AMBUILD.md  CMakeLists.txt  CMakePresets.json  License.txt  README.md  configure.py
.github/workflows/: build-on-push.yml
Detour/: CMakeLists.txt
Detour/Include/: DetourNavMesh.h  DetourNavMeshBuilder.h  DetourNavMeshQuery.h
Detour/Source/: DetourNavMesh.cpp  DetourNavMeshQuery.cpp
DetourTileCache/: CMakeLists.txt
DetourTileCache/Include/: DetourTileCache.h  DetourTileCacheBuilder.h
DetourTileCache/Source/: DetourTileCache.cpp
evobot/: CMakeLists.txt
evobot/HLSDK/: SDK_EULA.txt
evobot/metamod/: README.txt  api_info.h  commands_meta.h  comp_dep.h  conf_meta.h  dllapi.h  engine_api.h  game_support.h  games.h  h_export.h  info_name.h  linkent.h  log_meta.h  meta_api.h  metamod.h  mhook.h  mlist.h  mplugin.h  mqueue.h  mreg.h  mutil.h  osdep.h  plinfo.h  reg_support.h  sdk_util.h  studioapi.h  support_meta.h  thread_logparse.h  tqueue.h  types_meta.h  vdate.h  vers_meta.h
evobot/src/: NS_Constants.h  bot.cpp  bot.h  bot_alien.cpp  bot_alien.h  bot_bsp.cpp  bot_bsp.h  bot_client.cpp  bot_client.h  bot_commander.cpp  bot_commander.h  bot_config.cpp  bot_config.h  bot_func.h  bot_goals.h  bot_gorge.cpp  bot_gorge.h  bot_marine.cpp  bot_marine.h  bot_math.cpp  bot_math.h  bot_navigation.cpp  bot_navigation.h  bot_start.cpp  bot_structs.h  bot_tactical.cpp  bot_tactical.h  bot_task.cpp  bot_task.h  bot_util.cpp  bot_util.h  bot_weapons.cpp  bot_weapons.h  dll.cpp  dllapi.cpp  engine.cpp  engine_api.cpp  game_state.cpp  (+9 more)
(+106 files in other folders)
